compiler/tests/fail/x86-64/swap_type_mismatch.jazz
export fn main(reg u64 x, reg ptr u8[8] y) {
  x, y = #swap(y, x);
}
